<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsFragment">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/results_title"
        app:layout_constraintBottom_toTopOf="@+id/textScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textScore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="323dp"
        android:text="@string/results_score_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/button_play_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <Button
        android:id="@+id/button_play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textScore" />

</androidx.constraintlayout.widget.ConstraintLayout>